-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.4, 6.3.0
-
None
-
a6efb817b3 (qt/tqtc-qtwebengine/dev) a6efb817b3 (qt/qtwebengine/dev) 381e14f7fe (qt/qtwebengine/6.3) 381e14f7fe (qt/tqtc-qtwebengine/6.3) 381e14f7fe (qt/qtwebengine/6.3.1)
QtWebEngine 6.2 added qWebEngineVersion() and qWebEngineChromiumVersion() getters (and 6.3 added qWebEngineChromiumSecurityPatchVersion()).
Despite those additions having qdoc-like strings, they seemingly are nowhere to be found in the Qt documentation, see e.g. qtwebenginecore-module.html.
This causes e.g. PyQt to not include them.
For Gerrit Dashboard: QTBUG-102743 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
406675,4 | Fix documentation of getter functions | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
407156,2 | Fix documentation of getter functions | 6.3 | qt/qtwebengine | Status: MERGED | +2 | 0 |