Fix documentation of getter functions

Add documentation file in doc dir, and add a related header as a
documented header file.

Pick-to: 6.3
Fixes: QTBUG-102743
Change-Id: Ibcbc39affe1915b0606e879a9ec5a1189f2d5aea
Reviewed-by: Michal Klocek <michal.klocek@qt.io>