src/core/web_engine_context.cpp
@@ -891,39 +891,15 @@ bool WebEngineContext::closingDown()
 } // namespace
 
 QT_BEGIN_NAMESPACE
-/*!
-    \relates <qtwebenginecoreglobal.h>
-    \since 6.2
-
-    Returns the version number of Qt WebEngine at run-time as a string
-    (for example, "6.2.0"). This may be a different version than the
-    version the application was compiled against, and a different version
-    than Qt.
-*/
 const char *qWebEngineVersion() noexcept
 {
     return QTWEBENGINECORE_VERSION_STR;
 }
 
-/*!
-    \relates <qtwebenginecoreglobal.h>
-    \since 6.2
-
-    Returns the version number of Chromium used by Qt WebEngine at run-time
-    as a string (for example, "83.0.4103.122").
-*/
 const char *qWebEngineChromiumVersion() noexcept
 {
     return CHROMIUM_VERSION;
 }
-
-/*!
-    \relates <qtwebenginecoreglobal.h>
-    \since 6.3
-
-    Returns the version number of last Chromium version security patches have been
-    merged from.
-*/
 const char *qWebEngineChromiumSecurityPatchVersion() noexcept
 {
     return "99.0.4844.84"; // FIXME: Remember to update
